--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ ul li:hover {
 }
 
 .womangirl {
-  background: url("./../../public/womangirl.webp");
+  background: url("./../../public/children.png");
   background-size: cover;
   object-fit: cover;
   background-position: 50% 50%;
@@ -104,5 +104,16 @@ ul li:hover {
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 1023) {
+  .womangirl {
+    background: url("./../../public/children.png");
+    background-size: cover;
+    object-fit: cover;
+    background-position: 50% 50%;
+    width: 100%;
+    height: 210px;
   }
 }
