--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@ ul li:hover {
   object-fit: cover;
   background-position: 50% 50%;
   width: 200px;
-  height: 100%;
+  height: min-content;
 }
 
 .project1 {
@@ -56,22 +56,22 @@ ul li:hover {
   background-size: cover;
   object-fit: cover;
   height: 400px;
-  background-position: 50% 50%;
+  background-position: 50% 80%;
 }
 
 .project2 {
-  background: url("./../../public/pr1.jpg");
+  background: url("./../../public/pr11.jpg");
   background-size: cover;
   object-fit: cover;
   height: 400px;
-  background-position: 50% 50%;
+  background-position: 20% 20%;
 }
 .project3 {
   background: url("./../../public/pr2.jpg");
   background-size: cover;
   object-fit: cover;
   height: 400px;
-  background-position: 50% 50%;
+  background-position: 50% 40%;
 }
 .project4 {
   background: url("./../../public/prj4.jpg");
@@ -104,6 +104,14 @@ ul li:hover {
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+  }
+  .womangirl {
+    background: url("./../../public/children.png");
+    background-size: cover;
+    object-fit: cover;
+    background-position: 50% 50%;
+    width: 100%;
+    height: 210px;
   }
 }
 
